<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:title="@string/settings"
        android:id="@+id/settings_option"
    />



    <item
        android:id="@+id/search_bar"
        android:title="@string/hint_input_search_box"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="always"/>

    <item
        android:title="@string/now_playing_movies"
        android:id="@+id/now_playing_movies_icon"
        android:icon="@drawable/ic_local_movies_white_36dp"
        app:showAsAction="ifRoom"
    />

    <item
        android:title="@string/upcoming_movies"
        android:id="@+id/upcoming_movies_icon"
        android:icon="@drawable/ic_today_white_36dp"
        app:showAsAction="ifRoom"
    />

    <item
        android:title="@string/most_popular_movies"
        android:id="@+id/most_popular_movies_icon"
        android:icon="@drawable/ic_star_white_36dp"
        app:showAsAction="ifRoom"
    />


</menu>