<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            android:fillViewport="false">
        <LinearLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin">


                <LinearLayout
                        xmlns:android="http://schemas.android.com/apk/res/android"
                        android:orientation="vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center">
                        <ImageView
                                android:id="@+id/foto_1"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:padding="@dimen/action_all_directions_padding"/>
                        <TextView
                                android:id="@+id/descricao_1"
                                android:layout_width="wrap_content"
                                android:text="@string/about_pedro_description"
                                android:layout_height="wrap_content"
                                android:padding="@dimen/action_all_directions_padding"/>
                </LinearLayout>

                <LinearLayout
                        xmlns:android="http://schemas.android.com/apk/res/android"
                        android:orientation="vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center">
                        <ImageView
                                android:id="@+id/foto_2"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:padding="@dimen/action_all_directions_padding"/>
                        <TextView
                                android:id="@+id/descricao_2"
                                android:text="@string/about_ricardo_description"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:padding="@dimen/action_all_directions_padding"/>
                </LinearLayout>

                <LinearLayout
                        xmlns:android="http://schemas.android.com/apk/res/android"
                        android:orientation="vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center">
                        <ImageView
                                android:id="@+id/foto_3"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:padding="@dimen/action_all_directions_padding"/>
                        <TextView
                                android:id="@+id/descricao_3"
                                android:text="@string/about_jose_description"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:padding="@dimen/action_all_directions_padding"/>
                </LinearLayout>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/made_with_tmdb"
                        android:padding="@dimen/action_all_directions_padding"
                        android:id="@+id/textView"/>
        </LinearLayout>
</ScrollView>